tests: remove trusted cert even if test fails